force-app/main/default/objects/MigrationProgressEvent__e/MigrationProgressEvent__e.object-meta.xml
<CustomObject>
    <description>Published after every committed batch. Powers real-time LWC dashboard updates without polling.</description>
    <label>Migration Progress Event</label>
    <pluralLabel>Migration Progress Events</pluralLabel>
</CustomObject>