force-app/main/default/objects/MigrationProgressEvent__e/fields/CurrentObjectName__c.field-meta.xml
<CustomField>
    <fullName>CurrentObjectName__c</fullName>
    <description>API name of the Salesforce object currently being loaded (e.g. Account, Contact). Displayed in the dashboard status line.</description>
    <label>Current Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>