force-app/main/default/objects/MigrationProgressEvent__e/fields/EstimatedCompletionAt__c.field-meta.xml
<CustomField>
    <fullName>EstimatedCompletionAt__c</fullName>
    <description>ETA derived from current batch throughput rate. Null for the first batch when no rate baseline exists yet.</description>
    <label>Estimated Completion</label>
    <type>DateTime</type>
</CustomField>