force-app/main/default/objects/MigrationProgressEvent__e/fields/FailedCount__c.field-meta.xml
<CustomField>
    <fullName>FailedCount__c</fullName>
    <description>Cumulative count of records that produced DML errors. Drives the real-time error rate indicator on the dashboard.</description>
    <label>Failed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>