force-app/main/default/objects/MigrationProgressEvent__e/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <description>Salesforce Id of the MigrationJob__c record. Subscribers filter by this to scope dashboard updates to one job.</description>
    <label>Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>