force-app/main/default/objects/MigrationProgressEvent__e/fields/LoadedCount__c.field-meta.xml
<CustomField>
    <fullName>LoadedCount__c</fullName>
    <description>Cumulative count of records successfully inserted or upserted across all batches up to this point.</description>
    <label>Loaded Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>