force-app/main/default/objects/MigrationProgressEvent__e/fields/PercentComplete__c.field-meta.xml
<CustomField>
    <fullName>PercentComplete__c</fullName>
    <description>LoadedCount / TotalRecords * 100, pre-computed by MigrationProgressPublisher so the subscriber never needs a SOQL query to render the progress bar.</description>
    <label>Percent Complete</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>